# SurvivalGuide4Clubs

./: .gitignore  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vivliostyle.config.js
.claude/: pyproject.toml
.claude/skills/article-edit/: SKILL.md
.claude/skills/build-guide/: SKILL.md
.claude/skills/convert-document/: SKILL.md
.claude/skills/convert-document/scripts/: convert_document.py
.claude/skills/project-architecture/: SKILL.md
.github/workflows/: preview.yml  release.yml  release_build.yml
draft/: back-cover.html  front-cover.html  toc.html
draft/posts/: 前言.md  如何举办主题影展.md  如何做会刊.md  如何做外联.md  如何出摊.md  如何开展征文活动.md  如何开展观影活动.md  如何管理小社团.md  如何管理社团.md
latex/: main.tex  preamble.tex
latex/chapters/: 001.tex  002.tex
markdown/: 001.md  002.md
theme/: cover.css  custom.css  toc.css
themes/: article.tex  cover.tex  main.tex  preamble.tex
